welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: forward reference extends over definition of variable nbPas
		avance(); nbPas=nbPas+1
                          ^