welcome.lessons.welcome.loopfor.LoopFor.scala.code
for (i<- 1 to 7) {
	if (!estSurBiscuit) {
		avance(); nbPas=nbPas+1
	}
	else { prendBiscuit(); recule(); }
}
var nbPas = 0